Running on different system to try GPU training caused some issues